--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-router": "^3.0.1",
     "babel-runtime": "^6.26.0",
     "fastclick": "^1.0.6",
-    "jsonp": "0.2.1"
+    "jsonp": "0.2.1",
+    "axios": "0.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
