--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^3.0.1",
     "babel-runtime": "^6.26.0",
     "fastclick": "^1.0.6",
+    "vuex": "^3.0.1",
     "jsonp": "0.2.1",
     "axios": "0.16.1",
     "better-scroll": "^1.12.1",
